--- a/apps/test/templates/index.hbs
+++ b/apps/test/templates/index.hbs
@@ -1,3 +1,4 @@
+<h1>Conditions List:</h1>
 <ul>
-  <li><a href='#condition/aneurysm'>Aneurysm</a></li>
+  <li><a href='#condition/Aneurysm'>Aneurysm</a></li>
 </ul>
