--- a/apps/test/templates/condition.hbs
+++ b/apps/test/templates/condition.hbs
@@ -11,6 +11,7 @@
   </ul>
 
 <footer>
+<!--TODO(mumo) move this to a handlerbar helper -->
   <nav>
   {{#each breadcrumb }}
   <a href='{{this}}'>{{@key}}</a>
