--- a/apps/test/templates/index.hbs
+++ b/apps/test/templates/index.hbs
@@ -1,4 +1,8 @@
-<h1>Conditions List:</h1>
-<ul>
-  <li><a href='#condition/Aneurysm'>Aneurysm</a></li>
-</ul>
+<header>
+  <h2>Conditions List:</h2>
+</header>
+<article>
+  <ul>
+    <li><a href='#condition/Aneurysm'>Aneurysm</a></li>
+  </ul>
+</article>
